--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -26,8 +26,9 @@
     <div id="banner">
       <img src="/img/bannertemporario.png" alt="">
       <div id="bannerTexts">
-        <h3>Encontre um ecoponto perto de você</h3>
-        <h1>Recicle seu lixo eletrônico com quem entende.</h1>
+      <br> <br> <br> <br> <br>
+        <h3>Encontre um EcoPonto perto de você</h3>
+        <h1>Recicle seu lixo eletrônico <br> com quem entende.</h1>
       </div>
     </div>
 
@@ -36,23 +37,23 @@
       <div id="beneficio-conteiner">
         <div class="blocos">
           <i>icone aqui</i>
-          <h4>Titulo</h4>
-          <p>legenda</p>
+          <h4>Ambiente</h4>
+          <p>Minimiza os danos ambientais causados pelo descarte inadequado de eletrônicos.</p>
         </div>
         <div class="blocos">
           <i>icone aqui</i>
-          <h4>Titulo</h4>
-          <p>legenda</p>
+          <h4>Inovação</h4>
+          <p>Estimula novas tecnologias e soluções para o reaproveitamento de materiais. </p>
         </div>
         <div class="blocos">
           <i>icone aqui</i>
-          <h4>Titulo</h4>
-          <p>legenda</p>
+          <h4>Saúde</h4>
+          <p>Minimiza os riscos associados à exposição a produtos químicos perigosos. </p>
         </div>
         <div class="blocos">
           <i>icone aqui</i>
-          <h4>Titulo</h4>
-          <p>legenda</p>
+          <h4>Economia</h4>
+          <p>Empresas contratam trabalhadores locais e compram materiais de fornecedores regionais, beneficiando a economia local. </p>
         </div>
       </div>
     </div>
@@ -76,10 +77,9 @@
                   <img src="caminho/para/imagem3.jpg" alt="Imagem 3">
               </div>
               <div class="texto">
-                  <h1>Nossa História</h1>
+                  <h1>ENCONTRE PONTOS DE COLETA </h1>
                   <p>
-                      Há alguns anos, em meio ao avanço industrial, nasceu a CO2 Ambiental, dedicada à logística reversa de resíduos eletrônicos. Com uma ideologia focada na preservação ambiental, cada ação da empresa contribui para um futuro mais sustentável. Com uma equipe comprometida, a CO2 Ambiental não só alcançou sucesso, mas também liderou a mudança na sustentabilidade empresarial. A cada dispositivo reciclado, a empresa reduz o carbono e avança em direção a um mundo mais limpo e habitável, promovendo um futuro onde a natureza e a tecnologia prosperam juntas.
-                  </p><br>
+Procurando onde descartar seus eletrônicos? Nosso aplicativo lista os pontos de coleta mais próximos e fornece todas as informações que você precisa para uma reciclagem eficiente. Baixe agora e faça sua parte pelo planeta!                   </p><br>
               </div>
           </div>
 
@@ -125,28 +125,30 @@
     </details>
 
     <details class="faq-item">
-        <summary>Quais tipos de equipamentos vocês reciclam? <span class="arrow">v</span></summary>
-        <p>Descrição sobre os tipos de equipamentos reciclados.</p>
+        <summary>O que é o App EcoTech?<span class="arrow">v</span></summary>
+        <p>O App EcoTech facilita a localização de pontos de coleta para eletrônicos. Uma ferramenta prática para ajudar você a descartar seus eletrônicos de maneira responsável.</p>
     </details>
 
     <details class="faq-item">
-        <summary>Como posso agendar a coleta dos meus eletrônicos? <span class="arrow">v</span></summary>
-        <p>Descrição sobre como agendar a coleta.</p>
+        <summary> Posso adicionar novos pontos de coleta ao aplicativo? <span class="arrow">v</span></summary>
+        <p>Atualmente, a adição de novos pontos de coleta é gerenciada pela equipe do aplicativo. Se você souber de um novo ponto de coleta que gostaria de sugerir, entre em contato conosco através do suporte: suporte@ecotech.com.br </p>
     </details>
 
     <details class="faq-item">
-        <summary>Vocês oferecem certificado de destruição de dados? <span class="arrow">v</span></summary>
-        <p>Descrição sobre o certificado de destruição de dados.</p>
+        <summary> O que devo fazer antes de levar meus eletrônicos para coleta? <span class="arrow">v</span></summary>
+        <p>Certifique-se de remover todos os dados pessoais dos dispositivos e, quando possível, desconecte acessórios como cabos e baterias.  </p>
     </details>
 
     <details class="faq-item">
-        <summary>Quais são os benefícios de reciclar eletrônicos com vocês? <span class="arrow">v</span></summary>
-        <p>Descrição dos benefícios de reciclar eletrônicos.</p>
+        <summary>Quais tipos de eletrônicos podem ser reciclados?  <span class="arrow">v</span></summary>
+        <p>O aplicativo fornece informações detalhadas sobre quais tipos de eletrônicos são aceitos em cada ponto de coleta. Geralmente, você pode reciclar dispositivos como computadores, telefones, televisores e eletrodomésticos. 
+
+ </p>
     </details>
 
     <details class="faq-item">
-        <summary>O que acontece com os eletrônicos após a reciclagem? <span class="arrow">v</span></summary>
-        <p>Descrição sobre o processo pós-reciclagem.</p>
+        <summary>Como posso entrar em contato com o suporte técnico? <span class="arrow">v</span></summary>
+        <p>Se você tiver problemas ou dúvidas sobre o aplicativo, pode entrar em contato com nossa equipe de suporte através do e-mail suporte@ecotech.com.br  </p>
     </details>
 </div>
 <br><br><br>
