pagina inicial atualizada

--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
@@ -18,7 +19,7 @@
     <nav>
        <a href="#beneficio-conteiner">Benefícios</a>
       <a href="#faq">FAQ</a>
-      <a href="#nosso-app">Noso App</a>
+      <a href="#nosso-app">Nosso App</a>
     </nav>
   </header>
 
@@ -35,24 +36,25 @@
     <div class="beneficios">
       <h1>Benefícios de reciclar seu lixo eletrônico</h1>
       <div id="beneficio-conteiner">
+      
         <div class="blocos">
-          <i>icone aqui</i>
+      		<i class="fa fa-seedling" style="font-size:35px"></i>
           <h4>Ambiente</h4>
           <p>Minimiza os danos ambientais causados pelo descarte inadequado de eletrônicos.</p>
         </div>
         <div class="blocos">
-          <i>icone aqui</i>
-          <h4>Inovação</h4>
+        <i class="fa solid fa-lightbulb" style="font-size:35px" ></i>        
+         <h4>Inovação</h4>
           <p>Estimula novas tecnologias e soluções para o reaproveitamento de materiais. </p>
         </div>
         <div class="blocos">
-          <i>icone aqui</i>
+      <i class="fa-solid fa-heart-pulse" style="font-size:35px" ></i> 
           <h4>Saúde</h4>
           <p>Minimiza os riscos associados à exposição a produtos químicos perigosos. </p>
         </div>
         <div class="blocos">
-          <i>icone aqui</i>
-          <h4>Economia</h4>
+  <i class="fa-solid fa-hand-holding-dollar" style="font-size:35px" ></i>     
+  <h4>Economia</h4>
           <p>Empresas contratam trabalhadores locais e compram materiais de fornecedores regionais, beneficiando a economia local. </p>
         </div>
       </div>
