--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -92,62 +92,56 @@ body {
 footer {
 	background-color: #000;
 	color: #fff;
-	padding: 15px 0px;
-	padding: 1%;
-}
-
-.footer-content {
+	padding: 15px 0;
+	text-align: center;
+  }
+  .footer-content {
 	display: flex;
 	justify-content: space-between;
 	max-width: 1200px;
-	margin-left: 450px;
-	;
-}
-
-.footer-products,
-.footer-values {
+	margin: 0 auto; /* Centraliza horizontalmente */
+  }
+  .footer-products,
+  .footer-values {
 	flex: 1;
-	margin-right: 0%;
-}
-
-.footer-products h3,
-.footer-values h3 {
+	margin-right: 0;
+  }
+  .footer-products h3,
+  .footer-values h3 {
 	font-size: 30px;
 	margin-bottom: 35px;
-}
-
-.footer-section {
+  }
+  .footer-section {
 	flex: 1;
 	margin-right: 10px;
-}
-
-.footer-section h3 {
+	text-align: center;
+  }
+  .footer-section h3 {
 	font-size: 18px;
 	margin-bottom: 10px;
-}
-
-.footer-bottom {
+  }
+  .footer-bottom {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding-top: 100px;
-}
-
-.footer-left {
+	max-width: 1200px;
+	margin: 0 auto; /* Centraliza horizontalmente */
+  }
+  .footer-left {
 	margin-left: 14px;
-}
-
-.footer-links a {
+  }
+  .footer-links {
+	margin-left: 0; /* Remove o valor negativo */
+  }
+  .footer-links a {
 	color: #fff;
 	text-decoration: none;
-
-	margin-left: -215%
-}
-
-.footer-links a:hover {
+	margin-left: 15px; /* Ajuste para espaçamento normal */
+  }
+  .footer-links a:hover {
 	text-decoration: underline;
-}
-
+  }
 
 ul {
 	list-style: none;
@@ -172,6 +166,7 @@ ul li a:hover {
 	list-style: none;
 	padding: 0;
 	display: flex;
+	justify-content: center;
 }
 
 .social-icons li,
