--- a/ecotech2/src/main/resources/templates/donoEcoponto/editar.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/editar.html
@@ -241,35 +241,43 @@
 		</div>
 	</main>
 	<footer>
-		<div class="footer-content">
-			<div class="footer-section">
-				<h3>Suporte</h3>
-				<ul>
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Fale Conosco</a></li>
-				</ul>
-			</div>
-			<div class="footer-section">
-				<h3>Redes Sociais</h3>
-				<ul class="social-icons">
-					<li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
-				</ul>
-			</div>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>Suporte</h3>
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Fale Conosco</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Redes Sociais</h3>
+        <ul class="social-icons">
+          <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
+        </ul>
+      </div>
 
-		</div>
-		<hr>
-		<div class="footer-bottom">
-			<div class="footer-left">
-				<p style="font-size: larger;">Brasil</p>
-			</div>
-			<div class="footer-links">
-				<a href="#">Política de Privacidade</a>
-				<a href="#">Termos de Uso</a>
-			</div>
-		</div>
-	</footer>
+      <div class="footer-section">
+        <h3>Intranet</h3>
+        <ul>
+          <li><a href="/ecotech/user/login">Acesso funcionário</a></li>
+          <li><a href="/ecotech/ecoponto/perfil">Acesso dono de Ecoponto</a></li><br><br><br><br><br><br>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <div class="footer-left">
+        <p style="font-size: larger;">Brasil</p>
+      </div>
+      <div class="footer-links">
+        <a href="#">Política de Privacidade</a>
+        <a href="#">Termos de Uso</a>
+      </div>   
+    </div>
+
+  </footer>
 
 
 </body>
